# subt_gazebo

./: .gitignore  CMakeLists.txt  README-DANI.txt  README.md  package.xml
launch/: cueva_lidar.launch  cueva_lidar_2.launch  goal.launch  navigation.launch  navigation_2.launch  shaper.launch  spawn_quadrotor_with_two_lasers.launch  stack_navigation.launch  tunnel.launch
models/: p3at-tunel.rviz  pipe.dae
models/Backpack/: __bkp__model.sdf  model.config
models/Duct/: __bkp__model.sdf  model.config
models/Electrical Box/: __bkp__model.sdf
models/Survivor Female/: model.config  model.sdf
models/Survivor Male/: model.config  model.sdf
models/Toolbox/: model.config
models/Valve/: __bkp__model.sdf  model.config
models/cave_L_20m/meshes/: cave_L_20m.dae
models/cave_tile_1/: __bkp__model.sdf  model.sdf
models/cave_tile_1/meshes/: cave_tile_1.dae  txt~
models/cave_tile_10/: model.sdf
models/cave_tile_2/meshes/: __bkp__cave_tile_2.dae
models/cave_tile_3/: __bkp__model.sdf
models/cave_tile_33/: model.config  model.sdf
models/cave_tile_4/: __bkp__model.sdf
models/cave_tile_5/: model.sdf
models/cave_tile_6/: model.sdf
models/cave_tile_7/: model.sdf
models/cave_tile_7/meshes/: __bkp__cave_tile_7.dae
models/cave_tile_9/meshes/: cave_tile_9.dae
models/cave_tile_blocker/: model.sdf
models/cave_tile_ramp/: __bkp__model.sdf
models/cave_tile_start/: model.sdf
models/cave_tile_start/meshes/: __bkp__cave_tile_start.dae
models/cave_tiles/cave/: model.config  model.sdf
models/cave_tiles/cave_tile_10/: model.sdf
models/cave_tiles/cave_tile_2/: model.sdf
models/cave_tiles/cave_tile_3/: model.sdf
models/cave_tiles/cave_tile_6/: model.sdf
models/cave_tiles/cave_tile_7/: model.sdf
models/cave_tiles/cave_tile_8/: model.sdf
models/cave_tiles/cave_tile_9/: model.sdf
models/cave_tiles/cave_tile_ramp/: model.sdf
models/constrained_tunnel_tile_short/: model.sdf
models/constrained_tunnel_tile_tall/: model.sdf
models/constrained_tunnel_tile_tall-1/: model.config  model.sdf
models/hatch/: __bkp__model.sdf
models/non_tilable/Electrical Box/: model.config
models/non_tilable/Extinguisher/: model.config
models/non_tilable/Phone/: model.config
models/non_tilable/Radio/: __bkp__model.sdf  model.config
models/non_tilable/base_station/: model.config  model.sdf
models/non_tilable/gate/: model.sdf
models/non_tilable/tunnel_entrance/: model.sdf
models/rough_tunnel_tile_4way_intersection/: model.sdf
models/tilable/rough_tunnel_tile_90deg_turn/: model.sdf
models/tilable/rough_tunnel_tile_ramp/: model.sdf
models/tilable/rough_tunnel_tile_straight/: model.sdf
models/tilable/rough_tunnel_tile_vertical_shaft/: model.sdf
models/tilable_and_modifiable/cave_tile_1/: model.sdf
models/tilable_and_modifiable/cave_tile_2/: model.sdf
models/tilable_and_modifiable/cave_tile_3/: model.sdf
models/tilable_and_modifiable/cave_tile_4/: model.sdf
models/tilable_and_modifiable/cave_tile_5/: model.sdf
models/tunnel_bend_right/: model.sdf
models/tunnel_corner_left/: model.sdf
models/tunnel_corner_right/: __bkp__model.sdf
models/tunnel_elevation/: model.sdf
models/tunnel_intersection/: model.sdf
models/tunnel_straight/: model.sdf
models/tunnel_tile_1/: model.sdf
models/tunnel_tile_100/: model.config  model.sdf
models/tunnel_tile_2/: model.sdf
models/tunnel_tile_3/: model.sdf
models/tunnel_tile_6/: model.sdf
models_/Extinguisher/: model.sdf
models_/Phone/: model.sdf
models_/cave_tile_2/: __bkp__model.sdf
models_/cave_tile_8/: __bkp__model.sdf
models_/cave_tile_9/: __bkp__model.sdf
models_/tunnel_bend_left/: model.sdf
models_/tunnel_entrance/: model.sdf
models_/tunnel_intersection_t/: __bkp__model.sdf
models_/tunnel_straight/: model.sdf
paths/: bend-right.txt
urdf/: quadrotor_base.urdf.xacro  quadrotor_hokuyo_two_utm30lx.urdf.xacro  quadrotor_with_two_asus.gazebo.xacro  quadrotor_with_two_asus.urdf.xacro  quadrotor_with_two_hokuyo_utm30lx.gazebo.xacro  quadrotor_with_two_hokuyo_utm30lx.urdf.xacro
worlds/: cueva_1.world  cueva_1.world.bak  cueva_1.world_pre_luis  test_unizar.world
(+125 files in other folders)
