<package format="2">
  <name>subt_gazebo</name>
  <version>0.1.0</version>
  <description>The ROS package for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>


  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- path to models -->
    <gazebo_ros gazebo_model_path="${prefix}/models/modified"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/non_tilable"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/tilable"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/tilable_and_modifiable"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/cave_tiles"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/tunnel_tiles"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_1"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_2"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_3"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_4"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_5"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_6"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_7"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_8"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_9"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_10"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_ramp"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/cave_tile_blocker"/>

    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_1"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_2"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_3"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_4"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_5"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_6"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_tile_7"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_intersection"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_intersection_t"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/modified/only_upper/tunnel_intersection_t"/>
  </export>
</package>
